# visceral

./: README.md  app.py  idk.py  main.py  pyproject.toml
data/: rules.json
visceral/: debug_ollama.py
visceral/core/: agent.py  datamodels.py  engine.py
visceral/llm/: ollama_provider.py
visceral/memory/: json_memory.py
visceral/ui/: streamlit_app.py
